[gd_scene load_steps=6 format=3 uid="uid://cv0b0n522bdx5"]

[ext_resource type="Script" uid="uid://bccne8ayf7u7g" path="res://Scripts/menu.gd" id="1_xjki6"]
[ext_resource type="Texture2D" uid="uid://bpc40hy878nwe" path="res://Imgenes/6053836.jpg" id="2_dyfpn"]
[ext_resource type="Texture2D" uid="uid://bn3b0crve2ra2" path="res://Imgenes/90Z_2109.w032.n003.95B.p1.95-removebg-preview.png" id="3_76hkc"]
[ext_resource type="Texture2D" uid="uid://e5jx7t641kfr" path="res://Imgenes/opcciones-removebg-preview.png" id="4_rby0t"]
[ext_resource type="Texture2D" uid="uid://3dwm0pfu5svq" path="res://Imgenes/salir-removebg-preview.png" id="5_alsua"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xjki6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 42.0
offset_bottom = 41.0
scale = Vector2(0.386364, 0.329545)
texture = ExtResource("2_dyfpn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -279.0
offset_right = 679.0
offset_bottom = 677.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.422222, 0.59322)

[node name="Bjugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_76hkc")
flat = true

[node name="Bopcciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_rby0t")
flat = true

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("5_alsua")
flat = true

[connection signal="pressed" from="VBoxContainer/Bjugar" to="." method="_on_bjugar_pressed"]
[connection signal="pressed" from="VBoxContainer/Bopcciones" to="." method="_on_bopcciones_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
